--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-paper": "^4.0.1",
     "react-native-screens": "^2.10.1",
     "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^6.7.0",
